@@ -1,8 +1,8 @@
 Package: ecoval
 Type: Package
 Title: Procedures for Ecological Assessment of Surface Waters
-Version: 1.2.4
-Date: 2019-05-14
+Version: 1.2.5
+Date: 2019-09-23
 Author: Nele Schuwirth <nele.schuwirth@eawag.ch> and Peter Reichert <peter.reichert@eawag.ch> 
   with contributions by Simone Langhans and Christian Michel
 Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
@@ -14,6 +14,6 @@ License: GPL-3
 Depends: R (>= 3.5.0), utility, rivernet, jpeg
 LazyData: true
 NeedsCompilation: no
-Packaged: 2019-05-14 08:37:05 UTC; reichert
+Packaged: 2019-09-23 13:30:09 UTC; reichert
 Repository: CRAN
-Date/Publication: 2019-05-14 10:20:21 UTC
+Date/Publication: 2019-09-23 14:10:02 UTC
